--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,32 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="585"
+    android:viewportHeight="660">
+  <group android:scaleX="0.35454544"
+      android:scaleY="0.4"
+      android:translateX="188.79546"
+      android:translateY="198">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M569,172.72V588C569,627.76 536.76,660 497,660H72C32.24,660 0,627.76 0,588V72C0,32.24 32.24,0 72,0H398.09L569,172.72Z"
+        android:fillColor="#FEFBF3"/>
+    <path
+        android:pathData="M569,172.72V173H470C430.24,173 398,140.76 398,101V0H398.28L569,172.72Z"
+        android:fillColor="#EAE8E0"/>
+    <path
+        android:pathData="M98,146L298,146A16,16 0,0 1,314 162L314,162A16,16 0,0 1,298 178L98,178A16,16 0,0 1,82 162L82,162A16,16 0,0 1,98 146z"
+        android:fillColor="#D9D9D9"/>
+    <path
+        android:pathData="M98,243L298,243A16,16 0,0 1,314 259L314,259A16,16 0,0 1,298 275L98,275A16,16 0,0 1,82 259L82,259A16,16 0,0 1,98 243z"
+        android:fillColor="#D9D9D9"/>
+    <path
+        android:pathData="M98,340L235,340A16,16 0,0 1,251 356L251,356A16,16 0,0 1,235 372L98,372A16,16 0,0 1,82 356L82,356A16,16 0,0 1,98 340z"
+        android:fillColor="#D9D9D9"/>
+    <path
+        android:pathData="M281,395L561,395A24,24 0,0 1,585 419L585,483A24,24 0,0 1,561 507L281,507A24,24 0,0 1,257 483L257,419A24,24 0,0 1,281 395z"
+        android:fillColor="#F34E49"/>
+    <path
+        android:pathData="M477,311L477,591A24,24 0,0 1,453 615L389,615A24,24 0,0 1,365 591L365,311A24,24 0,0 1,389 287L453,287A24,24 0,0 1,477 311z"
+        android:fillColor="#F34E49"/>
+  </group>
 </vector>
